final commit Healthy Recipes

--- a/css_exercise_3/index.html
+++ b/css_exercise_3/index.html
@@ -29,7 +29,7 @@
                 Prepare quinoa and roast chicken until brown and 165 in  middle.
               </p>
 
-              <p class='Time'>
+              <p class='time'>
                 Time: 45 minutes
               </p>
             </li>
@@ -47,7 +47,7 @@
               <p>
                 Add walnuts and olive oil as garnish
               </p>
-              <p>
+              <p class="time">
                 Time: 1 minute
               </p>
             </li>
