--- a/css_exercise_4/index.html
+++ b/css_exercise_4/index.html
@@ -9,7 +9,7 @@
       <div class='header'>
         <img src="https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-2/travel.jpeg" />
         <h1>Olivia Woodruff</h1>
-        <p>I am a developer specializing in HTML and CSS. I like to run, bike, and make coffee using an Aeropress.</p>
+        <p class="about-me">I am a developer specializing in HTML and CSS. I like to run, bike, and make coffee using an Aeropress.</p>
         </div>
         <h2>Projects</h2>
         <p class='title'>Web Development projects</p>
